err/middlefield.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/attr'...
Listing './lib/python3.5/site-packages/attrs-17.4.0.dist-info'...
Listing './lib/python3.5/site-packages/caparg'...
Listing './lib/python3.5/site-packages/caparg/test'...
Compiling './lib/python3.5/site-packages/caparg/test/temp.py'...
***   File "./lib/python3.5/site-packages/caparg/test/temp.py", line 14
    ),
    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/caparg-17.12.3.dist-info'...
Listing './lib/python3.5/site-packages/elcaminoreal'...
Listing './lib/python3.5/site-packages/elcaminoreal/test'...
Listing './lib/python3.5/site-packages/elcaminoreal-18.1.1.dist-info'...
Listing './lib/python3.5/site-packages/exampleproj'...
Listing './lib/python3.5/site-packages/gather'...
Listing './lib/python3.5/site-packages/gather/example'...
Listing './lib/python3.5/site-packages/gather/tests'...
Listing './lib/python3.5/site-packages/gather-17.5.0.dist-info'...
Listing './lib/python3.5/site-packages/incremental'...
Listing './lib/python3.5/site-packages/incremental/tests'...
Listing './lib/python3.5/site-packages/incremental-17.5.0.dist-info'...
Listing './lib/python3.5/site-packages/middlefield'...
Listing './lib/python3.5/site-packages/middlefield/test'...
Listing './lib/python3.5/site-packages/middlefield-18.1.0.dist-info'...
Listing './lib/python3.5/site-packages/pex'...
Listing './lib/python3.5/site-packages/pex/bin'...
Listing './lib/python3.5/site-packages/pex/commands'...
Listing './lib/python3.5/site-packages/pex-1.2.15.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyrsistent'...
Listing './lib/python3.5/site-packages/pyrsistent-0.14.2.egg-info'...
Listing './lib/python3.5/site-packages/seashore'...
Listing './lib/python3.5/site-packages/seashore/tests'...
Listing './lib/python3.5/site-packages/seashore-17.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/singledispatch-3.4.0.3.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tlz'...
Listing './lib/python3.5/site-packages/toolz'...
Listing './lib/python3.5/site-packages/toolz/curried'...
Listing './lib/python3.5/site-packages/toolz/sandbox'...
Listing './lib/python3.5/site-packages/toolz/tests'...
Listing './lib/python3.5/site-packages/toolz-0.9.0.egg-info'...
Listing './lib/python3.5/site-packages/venusian'...
Listing './lib/python3.5/site-packages/venusian/tests'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/attrerror'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/attrerror_package'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/attrerror_package/will_cause_import_error'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/import_and_scan'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/importerror'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/importerror_package'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/importerror_package/will_cause_import_error'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/importonly'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/nested'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/nested/sub1'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/nested/sub1/subsub1'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/nested/sub2'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/nested/sub2/subsub2'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/one'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/pyc'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/pyc/subpackage'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/subpackages'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/subpackages/childpackage'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/two'...
Listing './lib/python3.5/site-packages/venusian-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/wheel'...
Listing './lib/python3.5/site-packages/wheel/signatures'...
Listing './lib/python3.5/site-packages/wheel/test'...
Listing './lib/python3.5/site-packages/wheel/test/complex-dist'...
Listing './lib/python3.5/site-packages/wheel/test/complex-dist/complexdist'...
Listing './lib/python3.5/site-packages/wheel/test/headers.dist'...
Listing './lib/python3.5/site-packages/wheel/test/simple.dist'...
Listing './lib/python3.5/site-packages/wheel/test/simple.dist/simpledist'...
Listing './lib/python3.5/site-packages/wheel/tool'...
Listing './lib/python3.5/site-packages/wheel-0.29.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
